--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     <h1>FlexBuy Product Sensitivity Analysis</h1>
         <nav>
             <ul>
-                <li><a href="Flexbuy-66-15-LTV-Analysis.html">About</a></li>
-                <li><a href="Flexbuy-66-18-LTV-Analysis.html">Preparation</a></li>
-                <li><a href="Flexbuy-75-15-LTV-Analysis.html">Vespers</a></li>
+                <menu><a href="Flexbuy-66-15-LTV-Analysis.html">66-15</a></menu>
+                <menu><a href="Flexbuy-66-18-LTV-Analysis.html">66-18</a></menu>
+                <menu><a href="Flexbuy-75-15-LTV-Analysis.html">75-15</a></menu>
             </ul>
         </nav>
 	
@@ -119,10 +119,7 @@
     <div class="card">
         <h2>Equity Sensitivity Surface</h2>
         <p>This model simulates the "Equity Trap" risk at the Month 37 step-up point. Rotate the graph to explore the impact of Interest Rates (Y-Axis) on Equity (Z-Axis).</p>
-        
-        <div class="graph-container">
-            <iframe src="FlexBuy_Analysis.html"></iframe>
-        </div>
+		<P>Please click on the header links for strcuture analysis.</P>
     </div>
 
     <!-- Assumptions Section -->
@@ -172,3 +169,4 @@
 
 </body>
 </html>
+
