--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlexBuy Financial Analysis Dashboard</title>
     <style>
+		
         :root {
             --ford-blue: #003478;
             --light-gray: #f4f4f4;
@@ -25,6 +26,24 @@
             padding: 1.5rem 2rem;
             text-align: center;
         }
+
+		header nav {
+		    margin-top: 10px;
+		}
+		
+		header nav a {
+		    color: white;             /* Makes the link white */
+		    text-decoration: none;    /* Removes the underline */
+		    margin: 0 20px;           /* Adds spacing between links */
+		    font-weight: 500;
+		    font-size: 0.95rem;
+		    transition: color 0.3s;   /* Smooth transition for hover */
+		}
+		
+		header nav a:hover {
+		    color: #cbdcf7;           /* Changes to a light blue/gray on hover */
+		    text-decoration: underline; 
+		}
 
         .container {
             max-width: 1200px;
@@ -169,4 +188,5 @@
 
 </body>
 </html>
+
 
